Overflow and circuits in circuits menu fixed

--- a/VCD Frontend/src/CSS/circuitsMenu.css
+++ b/VCD Frontend/src/CSS/circuitsMenu.css
@@ -1,6 +1,7 @@
 /*_______circuits menu_______*/
 .circuitsMenu {
     /*width: 15.33rem;*/
+    overflow: auto;
     max-height: 70vh;
     z-index: 200;
     position: fixed;
